<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amit.schoolhub.login">

    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/uss"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/key"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bt_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="243dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_signup"
            android:text="@string/login"
            android:textSize="25dp" />


        <Button
            android:id="@+id/bt_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="276dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_signup"
            android:text="@string/register"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="565dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
