<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amit.schoolhub.feedback">


    <LinearLayout
        android:id="@+id/lin_ver_feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="10dp">
        <TextView
            android:id="@+id/tv_rateus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/ratetheapp"
            android:layout_marginTop="50dp"
            />
        <RatingBar
            android:id="@+id/rb_value"
            style="@android:style/Widget.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:numStars="5"
            android:rating="3"
            android:layout_gravity="center_horizontal"

            />

        <TextView
            android:id="@+id/tv_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#13c43f"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/et_yourfeedback"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginTop="20dp"
            android:hint="@string/yourfeedback"
            android:inputType="text|textMultiLine" />

        <Button
            android:id="@+id/bt_sendfeedback"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="243dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_signup"
            android:text="@string/sendfeedback"
            android:textSize="25dp" />

    </LinearLayout>
</LinearLayout>
